--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: install pip packages
+        run: pip install bs4
+        
       - name: build the pages
         run: python build.py
 
